@@ -1,5 +1,7 @@
 *SVN*
 
+* Migrations: create_table supports primary_key_prefix_type.  #10314 [student, thechrisoshow]
+
 * Added logging for dependency load errors with fixtures #11056 [stuthulhu]
 
 * Time zone aware attributes use Time#in_time_zone [Geoff Buesing]
